// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h4
  className="sc-AxjAm gmoGVi sinoui-typography sinoui-typography--h4"
  color="textPrimary"
  type="h4"
>
  H4
</h4>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-AxjAm gmoGVi sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h2>,
  <h4
    className="sc-AxjAm kfXfAS sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm drxVrD sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm eoiunu sinoui-typography sinoui-typography--h4"
    color="success"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm gFyrAS sinoui-typography sinoui-typography--h4 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h4
    className="sc-AxjAm gmoGVi sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm dLFzN sinoui-typography sinoui-typography--h4"
    color="primary"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm fGOJQK sinoui-typography sinoui-typography--h4"
    color="secondary"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm gmoGVi sinoui-typography sinoui-typography--h4"
    color="textPrimary"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm jNpKNH sinoui-typography sinoui-typography--h4"
    color="textSecondary"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm DBDhH sinoui-typography sinoui-typography--h4"
    color="error"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm dIdLRa sinoui-typography sinoui-typography--h4"
    color="warning"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm eoiunu sinoui-typography sinoui-typography--h4"
    color="success"
    type="h4"
  >
    H4
  </h4>,
  <h4
    className="sc-AxjAm kgwdlO sinoui-typography sinoui-typography--h4"
    color="info"
    type="h4"
  >
    H4
  </h4>,
]
`;
